--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
-  "semi": false,
-  "singleQuote": true
+	"jsxSingleQuote": true,
+	"semi": false,
+	"useTabs": true,
+	"plugins": [
+		"prettier-plugin-organize-imports",
+		"prettier-plugin-tailwindcss"
+	],
+	"pluginSearchDirs": false
 }
