--- a/package.json
+++ b/package.json
@@ -1,51 +1,59 @@
 {
-  "private": true,
-  "sideEffects": false,
-  "scripts": {
-    "generate:css": "tailwindcss -i app/styles/tailwind.css -o app/tailwind.css",
-    "build:css": "npm run generate:css -- -m",
-    "build:remix": "remix build",
-    "build": "run-s \"build:*\"",
-    "dev:css": "npm run generate:css -- -w",
-    "dev:remix": "remix watch",
-    "dev:wrangler": "cross-env NODE_ENV=development wrangler pages dev ./public --local",
-    "dev": "npm run build && run-p \"dev:*\"",
-    "start": "cross-env NODE_ENV=production npm run dev:wrangler",
-    "fmt": "prettier --write --cache .",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint --ignore-path .gitignore .",
-    "typecheck": "tsc -b",
-    "test": "playwright test",
-    "validate": "run-p fmt lint typecheck test"
-  },
-  "dependencies": {
-    "@remix-run/cloudflare": "*",
-    "@remix-run/cloudflare-pages": "*",
-    "@remix-run/react": "*",
-    "clsx": "^1.2.1",
-    "cross-env": "^7.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "tiny-invariant": "^1.3.1"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^3.16.0",
-    "@playwright/test": "^1.27.1",
-    "@remix-run/dev": "*",
-    "@remix-run/eslint-config": "*",
-    "@types/react": "^17.0.47",
-    "@types/react-dom": "^17.0.17",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4",
-    "wrangler": "^2.1.6"
-  },
-  "engines": {
-    "node": ">=16.13"
-  }
+	"private": true,
+	"sideEffects": false,
+	"license": "MIT",
+	"scripts": {
+		"prepare": "husky install",
+		"build": "remix build",
+		"dev:remix": "remix watch",
+		"dev:wrangler": "cross-env NODE_ENV=development npm run wrangler",
+		"dev": "npm run build && run-p -l dev:*",
+		"start": "cross-env NODE_ENV=production npm run wrangler",
+		"wrangler": "wrangler pages dev ./public",
+		"typecheck": "tsc",
+		"fmt": "prettier . --cache --write --ignore-unknown",
+		"lint": "eslint . --ext .ts,.tsx --cache --cache-location ./node_modules/.cache/.eslintcache",
+		"test": "playwright test",
+		"validate": "run-p -lns typecheck lint test"
+	},
+	"lint-staged": {
+		"*": "prettier --cache --write --ignore-unknown",
+		"*.{ts,tsx}": "eslint"
+	},
+	"dependencies": {
+		"@remix-run/cloudflare": "^1.13.0",
+		"@remix-run/cloudflare-pages": "^1.13.0",
+		"@remix-run/react": "^1.13.0",
+		"clsx": "^1.2.1",
+		"cross-env": "^7.0.3",
+		"isbot": "^3.6.6",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"superstruct": "^1.0.3"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^3.18.0",
+		"@playwright/test": "^1.31.1",
+		"@remix-run/dev": "^1.13.0",
+		"@remix-run/eslint-config": "^1.13.0",
+		"@tailwindcss/forms": "^0.5.3",
+		"@types/react": "^18.0.25",
+		"@types/react-dom": "^18.0.8",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.27.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^13.1.2",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.4",
+		"prettier-plugin-organize-imports": "^3.2.2",
+		"prettier-plugin-tailwindcss": "^0.2.3",
+		"tailwindcss": "^3.2.7",
+		"tailwindcss-radix": "^2.7.0",
+		"typescript": "^4.9.5",
+		"wrangler": "^2.2.1"
+	},
+	"engines": {
+		"node": ">=16.13"
+	}
 }
